# persona-cv-backend

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml  requirements.txt
db/: supabase.py
routers/: chat.py  conversations.py  documents.py  graphiti.py  pinned_qa.py  progress.py  views.py
services/: conversations.py  document_processor.py  embeddings.py  graphiti_client.py  llm.py  search.py
services/agents/: graph.py  nodes.py  state.py
tests/: test_chat_history.py  test_conversations.py  test_conversations_router.py  test_document_processor.py  test_embeddings.py  test_excerpt.py  test_graphiti.py  test_llm.py  test_pinned_qa.py  test_routers.py  test_search.py  test_views_router.py
