[project]
name = "backend"
version = "0.1.0"
description = "persona-cv backend"
readme = "CLAUDE.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "lxml==5.3.0",
    "openai==1.46.1",
    "pdfplumber==0.11.4",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "supabase==2.7.4",
    "uvicorn[standard]==0.30.6",
    "graphiti-core>=0.3.0",
    "langgraph>=1.0.1",
    "langchain-openai>=0.2.2",
    "langsmith>=0.7.16",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]
